For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-6.2 release changes: 

2003-03-26  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el (fi::make-connection-to-lisp): bug13111: hide
	  *LEP...* buffers

2003-03-24    <layer@HOBART>

	* fi-site-init.el: <unknown spr#>: handle `cywgin32' system-type

2003-01-28  Kevin Layer  <layer@crikey>

	* fi-indent.el: bug13001: damn, just missed bug 13,000!  Anyway,
	  indent while and until properly
	* fi-subproc.el: bug13001: damn, just missed bug 13,000!  Anyway,
	  fix bug whereby first completion in a shell buffer would get "No
	  marker" error.

2002-12-12  Kevin Layer  <layer@crikey>

	* fi-emacs19.el (fi::lisp-font-lock-keywords): bug12862: fix order
	of regexp parts for better font-locking

2002-10-24  Kevin Layer  <layer@crikey>

	* fi-subproc.el: bug12600: add `.' to lisp prompt regexp

2002-09-27    <layer@HOBART>

	* Makefile: updated cygwin no longer has `pwd' in env, so make it

2002-09-25  Kevin Layer  <layer@crikey>

	* fi-lep.el: bug12531: fix another fontification problem

******************************************************************************
2.3.5

2002-04-11  Kevin Layer  <layer@crikey>

	* fi-keys.el (fi:super-paren): bug12029

******************************************************************************
2.3.4

join from acl61 to acl6 branch on 02Mar2002
command: join.sh acl61 acl61_to_acl6_merge2 acl61_to_acl6_02Mar2002 eli

******************************************************************************
2.3.3

2002-02-26  Kevin Layer  <layer@crikey>

	* fi-emacs19.el: from mikel: bug11469: more fixes for same bug
